<resources>
    <string name="app_name">PAPER DEKKHO</string>
    <string name="btn_link_to_login">Already Registered ? Login Me !</string>
    <string name="btn_forgot_password">Forgot Password</string>
    <string name="action_sign_in_short">SignUp</string>
    <string name="email">Email</string>
    <string name="hint_password">Password</string>
    <string name="name">User Name</string>
    <string name="btn_link_to_register">Not Registered Yet ?</string>
    <string name="btn_login">Login</string>
    <string name="hint_email">Email Id</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="forgot_password_msg">Forget Password</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="minimum_password">Password too Short</string>
    <string name="course">Course</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="your_name">Your Name</string>
    <string name="share">Share</string>
    <string name="button">Button</string>
    <string name="your_rating">Your Ratting</string>
    <string name="your_ratting">Your ratting</string>
    <string name="bad">Bad</string>
    <string name="ok">Okk</string>
    <string name="not_bad">Not Bad</string>
    <string name="nice">Nice</string>
    <string name="very_nice">Very Nice</string>
    <string name="thank_you">Thank You</string>
    <string name="bba">BBA</string>
    <string name="bsc">BSC</string>
    <string name="_10th">10Th</string>
    <string name="_12th">12Th</string>
    <string name="btech">Btech</string>

</resources>
