<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_course"
            android:icon="@drawable/course_24dp"
            android:title="@string/course" />
        <item
            android:id="@+id/nav_Ratting_bar"
            android:icon="@drawable/ratting_bar_24dp"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/feedback" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/logout" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="Share"
            />
    </group>



</menu>
