<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Feedback_fragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView android:text="@string/your_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:textSize="30sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText1"
            android:paddingLeft="20dp"
            android:paddingRight="0dp"
            android:inputType=""
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView1"
            android:layout_toEndOf="@+id/textView1"
            tools:ignore="LabelFor,RtlHardcoded" />
        <TextView android:text="@string/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:paddingTop="10dp"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:paddingLeft="20dp"
            android:paddingRight="0dp"
            android:layout_below="@+id/editText1"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:maxLines="5"
            android:minLines="5"
            tools:ignore="LabelFor,RtlHardcoded"
            android:inputType="" />

        <Button        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/button"
            android:singleLine="true"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/editText2"
            android:layout_alignStart="@+id/editText2"
            tools:ignore="RtlHardcoded" />
    </RelativeLayout>

</FrameLayout>