<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#78244c"
    tools:context=".Course_fragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:gravity="center"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/btech"
                android:layout_width="0dp"
                android:layout_height="190dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"

                android:background="#ffcffc"
                android:layout_weight="1"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorAccent"
                        android:gravity="center"
                        android:text="@string/btech" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/btech" />
                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
        <!-- second cardview starts-->
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:gravity="center"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/bsc"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="1"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="90dp"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/design_oval_1"
                        android:gravity="center"
                        android:text="@string/bba" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/bba" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/bba"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="90dp"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/deeppurple"
                        android:gravity="center"
                        android:text="@string/bsc" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/bsc" />
                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:gravity="center"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/tewel"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/aamir1"
                        android:gravity="center"
                        android:text="@string/_10th" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/_10th" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/ten"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/aamir2"
                        android:gravity="center"
                        android:text="@string/_12th" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/_12th" />
                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

    </LinearLayout>

</FrameLayout>